@@ -12,7 +12,7 @@ ACE_RCSID (Infrastructure_Controlled,
 LB_server::LB_server (int argc, ACE_TCHAR **argv)
   : argc_ (argc)
   , argv_ (argv)
-  , ior_output_file_("obj.ior")
+  , ior_output_file_(ACE_TEXT("obj.ior"))
 {
 }
 
